Updated Ukrainian translation to v0.2.5

--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -13,7 +13,7 @@
 	"About": "Про програму",
 	"Account": "Обліковий запис",
 	"Accurate information": "Точна інформація",
-	"Active Users": "",
+	"Active Users": "Активні користувачі",
 	"Add": "Додати",
 	"Add a model id": "Додайте id моделі",
 	"Add a short description about what this model does": "Додайте короткий опис того, що робить ця модель",
@@ -38,7 +38,7 @@
 	"All Users": "Всі користувачі",
 	"Allow": "Дозволити",
 	"Allow Chat Deletion": "Дозволити видалення чату",
-	"Allow non-local voices": "",
+	"Allow non-local voices": "Дозволити не локальні голоси",
 	"alphanumeric characters and hyphens": "алфавітно-цифрові символи та дефіси",
 	"Already have an account?": "Вже є обліковий запис?",
 	"an assistant": "асистента",
@@ -85,7 +85,7 @@
 	"Checking for updates...": "Перевірка оновлень...",
 	"Choose a model before saving...": "Оберіть модель перед збереженням...",
 	"Chunk Overlap": "Перекриття фрагментів",
-	"Chunk Params": "Параметри фрагментів",
+	"Chunk Params": "Параметри розбиття",
 	"Chunk Size": "Розмір фрагменту",
 	"Citation": "Цитування",
 	"Click here for help.": "Клацніть тут, щоб отримати допомогу.",
@@ -156,7 +156,7 @@
 	"Display the username instead of You in the Chat": "Показувати ім'я користувача замість 'Ви' в чаті",
 	"Document": "Документ",
 	"Document Settings": "Налаштування документа",
-	"Documentation": "",
+	"Documentation": "Документація",
 	"Documents": "Документи",
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "не встановлює жодних зовнішніх з'єднань, і ваші дані залишаються в безпеці на вашому локальному сервері.",
 	"Don't Allow": "Не дозволяти",
@@ -171,7 +171,7 @@
 	"Edit Doc": "Редагувати документ",
 	"Edit User": "Редагувати користувача",
 	"Email": "Електронна пошта",
-	"Embedding Batch Size": "",
+	"Embedding Batch Size": "Розмір пакету під час вбудовування",
 	"Embedding Model": "Модель вбудовування",
 	"Embedding Model Engine": "Двигун модели встраивания ",
 	"Embedding model set to \"{{embedding_model}}\"": "Встановлена модель вбудовування \"{{embedding_model}}\"",
@@ -208,14 +208,14 @@
 	"Experimental": "Експериментальне",
 	"Export": "Експорт",
 	"Export All Chats (All Users)": "Експортувати всі чати (всі користувачі)",
-	"Export chat (.json)": "",
+	"Export chat (.json)": "Експорт чату (.json)",
 	"Export Chats": "Експортувати чати",
 	"Export Documents Mapping": "Експортувати відображення документів",
 	"Export Models": "Експорт моделей",
 	"Export Prompts": "Експортувати промти",
 	"Failed to create API Key.": "Не вдалося створити API ключ.",
 	"Failed to read clipboard contents": "Не вдалося прочитати вміст буфера обміну",
-	"Failed to update settings": "",
+	"Failed to update settings": "Не вдалося оновити налаштування",
 	"February": "Лютий",
 	"Feel free to add specific details": "Не соромтеся додавати конкретні деталі",
 	"File Mode": "Файловий режим",
@@ -315,7 +315,7 @@
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Примітка: Якщо ви встановите мінімальну кількість балів, пошук поверне лише документи з кількістю балів, більшою або рівною мінімальній кількості балів.",
 	"Notifications": "Сповіщення",
 	"November": "Листопад",
-	"num_thread (Ollama)": "num_thread (Оллама)",
+	"num_thread (Ollama)": "num_thread (Ollama)",
 	"October": "Жовтень",
 	"Off": "Вимк",
 	"Okay, Let's Go!": "Гаразд, давайте почнемо!",
@@ -378,7 +378,7 @@
 	"Reranking Model": "Модель переранжування",
 	"Reranking model disabled": "Модель переранжування вимкнена",
 	"Reranking model set to \"{{reranking_model}}\"": "Модель переранжування встановлено на \"{{reranking_model}}\"",
-	"Reset Upload Directory": "",
+	"Reset Upload Directory": "Скинути каталог завантажень",
 	"Reset Vector Storage": "Скинути векторне сховище",
 	"Response AutoCopy to Clipboard": "Автокопіювання відповіді в буфер обміну",
 	"Role": "Роль",
@@ -434,13 +434,13 @@
 	"Set Voice": "Встановити голос",
 	"Settings": "Налаштування",
 	"Settings saved successfully!": "Налаштування успішно збережено!",
-	"Settings updated successfully": "",
+	"Settings updated successfully": "Налаштування успішно оновлені",
 	"Share": "Поділитися",
 	"Share Chat": "Поділитися чатом",
 	"Share to OpenWebUI Community": "Поділитися зі спільнотою OpenWebUI",
 	"short-summary": "короткий зміст",
 	"Show": "Показати",
-	"Show Admin Details in Account Pending Overlay": "",
+	"Show Admin Details in Account Pending Overlay": "Відобразити дані адміністратора у вікні очікування облікового запису",
 	"Show shortcuts": "Показати клавіатурні скорочення",
 	"Showcased creativity": "Продемонстрований креатив",
 	"sidebar": "бокова панель",
@@ -504,8 +504,8 @@
 	"Use '#' in the prompt input to load and select your documents.": "Для введення промтів до веб-сторінок (URL) або вибору документів, будь ласка, використовуйте символ '#'.",
 	"Use Gravatar": "Змінити аватар",
 	"Use Initials": "Використовувати ініціали",
-	"use_mlock (Ollama)": "use_mlock (Оллама)",
-	"use_mmap (Ollama)": "use_mmap (Оллама)",
+	"use_mlock (Ollama)": "use_mlock (Ollama)",
+	"use_mmap (Ollama)": "use_mmap (Ollama)",
 	"user": "користувач",
 	"User Permissions": "Права користувача",
 	"Users": "Користувачі",
@@ -518,7 +518,7 @@
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Попередження: Якщо ви оновлюєте або змінюєте модель вбудовування, вам потрібно буде повторно імпортувати всі документи.",
 	"Web": "Веб",
 	"Web Loader Settings": "Налаштування веб-завантажувача",
-	"Web Params": "Налаштування веб-завантажувача",
+	"Web Params": "Веб-параметри",
 	"Web Search": "Веб-пошук",
 	"Web Search Engine": "Веб-пошукова система",
 	"Webhook URL": "URL веб-запиту",
@@ -528,7 +528,7 @@
 	"What’s New in": "Що нового в",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "Коли історія вимкнена, нові чати в цьому браузері не будуть відображатися в історії на жодному з ваших пристроїв.",
 	"Whisper (Local)": "Whisper (локально)",
-	"Widescreen Mode": "",
+	"Widescreen Mode": "Широкоекранний режим",
 	"Workspace": "Робочий простір",
 	"Write a prompt suggestion (e.g. Who are you?)": "Напишіть промт (напр., Хто ти?)",
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишіть стислий зміст у 50 слів, який узагальнює [тема або ключове слово].",
